@@ -4,11 +4,14 @@
 
 from libc.stdio cimport FILE
 
+
 cdef extern from "gdal.h":
     char * GDALVersionInfo (char *pszRequest)
 
+
 cdef extern from "gdal_version.h":
     int    GDAL_COMPUTE_VERSION(int maj, int min, int rev)
+
 
 cdef extern from "cpl_conv.h":
     void *  CPLMalloc (size_t)
@@ -16,6 +19,8 @@ cdef extern from "cpl_conv.h":
     void    CPLSetThreadLocalConfigOption (char *key, char *val)
     void    CPLSetConfigOption (char *key, char *val)
     const char *CPLGetConfigOption (char *, char *)
+    int CPLCheckForFile(char *, char **)
+
 
 cdef extern from "cpl_string.h":
     char ** CSLAddNameValue (char **list, char *name, char *value)
@@ -23,9 +28,17 @@ cdef extern from "cpl_string.h":
     void    CSLDestroy (char **list)
     char ** CSLAddString(char **list, const char *string)
 
+
+cdef extern from "sys/stat.h" nogil:
+    struct stat:
+        pass
+
+
 cdef extern from "cpl_vsi.h" nogil:
+
     ctypedef int vsi_l_offset
     ctypedef FILE VSILFILE
+    ctypedef stat VSIStatBufL
 
     unsigned char *VSIGetMemFileBuffer(const char *path,
                                        vsi_l_offset *data_len,
@@ -35,14 +48,16 @@ cdef extern from "cpl_vsi.h" nogil:
     VSILFILE* VSIFOpenL(const char *path, const char *mode)
     int VSIFCloseL(VSILFILE *fp)
     int VSIUnlink(const char *path)
-
+    int VSIMkdir(const char *path, long mode)
+    int VSIRmdir(const char *path)
     int VSIFFlushL(VSILFILE *fp)
     size_t VSIFReadL(void *buffer, size_t nSize, size_t nCount, VSILFILE *fp)
     int VSIFSeekL(VSILFILE *fp, vsi_l_offset nOffset, int nWhence)
     vsi_l_offset VSIFTellL(VSILFILE *fp)
     int VSIFTruncateL(VSILFILE *fp, vsi_l_offset nNewSize)
     size_t VSIFWriteL(void *buffer, size_t nSize, size_t nCount, VSILFILE *fp)
-    int VSIUnlink (const char * pathname)
+    int VSIStatL(const char *pszFilename, VSIStatBufL *psStatBuf)
+
 
 ctypedef int OGRErr
 ctypedef struct OGREnvelope:
@@ -50,6 +65,7 @@ ctypedef struct OGREnvelope:
     double MaxX
     double MinY
     double MaxY
+
 
 cdef extern from "ogr_core.h":
     ctypedef enum OGRwkbGeometryType:
